k8s/workloads/jellyfin/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        platform.io/type: secondary
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
          resources:
            limits:
              amd.com/gpu: 1
          volumeMounts:
            - name: data
              mountPath: /data
            - name: data
              mountPath: /config/data/data/subtitles
              subPath: metadata/subtitles
            - name: cache
              mountPath: /cache
            - name: config
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: cache
          persistentVolumeClaim:
            claimName: cache-pvc
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  labels:
    app: seerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      securityContext:
        fsGroup: 1000
      nodeSelector:
        platform.io/pi: pi-2
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: seerr-config-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellysweep
  labels:
    app: jellysweep
spec:
  replicas: 0
  selector:
    matchLabels:
      app: jellysweep
  template:
    metadata:
      labels:
        app: jellysweep
    spec:
      nodeSelector:
        platform.io/pi: pi-2
      containers:
        - name: jellysweep
          image: ghcr.io/jon4hz/jellysweep:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: jellysweep
              containerPort: 3002
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: app-config
              mountPath: /app/data
              subPath: jellysweep
            - name: config
              mountPath: /app
              readOnly: true
      volumes:
        - name: app-config
          persistentVolumeClaim:
            claimName: seerr-config-pvc
        - name: config
          configMap:
            name: jellysweep-config
            items:
              - key: config.yml
                path: config.yml
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 8096
      targetPort: 8096
  selector:
    app: jellyfin
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-ts
spec:
  ports:
    - port: 8096
      targetPort: 8096
  selector:
    app: jellyfin
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  selector:
    app: seerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
---
apiVersion: v1
kind: Service
metadata:
  name: jellysweep
spec:
  selector:
    app: jellysweep
  ports:
    - port: 80
      targetPort: jellysweep
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.rvserver.online`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
    - match: Host(`seerr.rvserver.online`)
      kind: Rule
      services:
        - name: seerr
          port: 5055
    - match: Host(`jellysweep.rvserver.online`)
      kind: Rule
      services:
        - name: jellysweep
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ts
  annotations:
    tailscale.com/hostname: jellyfin
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-ts
                port:
                  number: 8096
  tls:
    - hosts:
        - jellyfin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr-ts
  annotations:
    tailscale.com/hostname: seerr
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 5055
  tls:
    - hosts:
        - seerr
